[package]
name = "StarTechBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
tower-http = { version = "0.5", features = ["cors"] }
argon2 = "0.5"
rand_core = "0.6"
chrono = { version = "0.4", features = ["clock"] }
